v0.39.0  2026-04-26|  Refactor and enhance user management features:
- Refactored hooks to improve code readability and maintainability.
- Removed unused `useStudentsStats` hook.
- Added pagination and sorting functionality to user and clicker management pages.
- Updated API service calls to ensure consistent endpoint formatting.
- Introduced a new `TablePaginationFooter` component for better pagination control.
- Added new schemas for authentication, clickers, difficulties, and roles in Swagger documentation.
- Updated Swagger for all services.
- Updated translations for pagination controls in English and Spanish.
