# backend/src/services/v1/responseServices.js
@@ -3,29 +3,27 @@ const Response = require('../../models/Response');
 const Clicker = require('../../models/Clicker');
 const Question = require('../../models/Question');
 
+// Import debug
+const debug = require('debug')('backend:services:v1:responseServices');
+
 // Response services
-// Service to get all responses
-const getAllResponses = async () => {
-  return await Response.find().populate('playerId').populate('questionId').populate('sessionId');
-};
-
-// Service to get a response by ID
-const getResponseById = async (id) => {
-  return await Response.findById(id).populate('playerId').populate('questionId').populate('sessionId');
-}
-
 // Service to create a new response
 const createResponse = async (body) => {
     const {sessionId, questionId, deviceId, answer} = body;
     
     try{
+        debug('Creating response with body:', body);
         const clicker = await Clicker.findOne({ deviceCode: deviceId, status: "assigned" });
         if (!clicker) throw new Error('Clicker not found');
 
+        debug('Found clicker:', clicker);
         const question = await Question.findById(questionId);
         if (!question) throw new Error('Question not found');
 
+        debug('Found question:', question);
         const playerId = clicker.assignedToUserId;
+
+        debug(`Processing response for player ID: ${playerId}, question ID: ${questionId}, answer: ${answer}`);
 
         // Convert answer (e.g., "A", "B", "C") to index (0, 1, 2) and check if it's correct
         const answerIndex = answer.toUpperCase().charCodeAt(0) - 65;
@@ -34,6 +32,7 @@ const createResponse = async (body) => {
         const isCorrect = selectedOption?.isCorrect || false;
         const pointsAwarded = isCorrect ? question.points : 0;
 
+        debug(`Answer is ${isCorrect ? 'correct' : 'incorrect'}. Points awarded: ${pointsAwarded}`);
         return await Response.create({
             questionId,
             sessionId,
@@ -43,14 +42,12 @@ const createResponse = async (body) => {
             pointsAwarded
         });
     } catch(error){
-        throw error.message;
+        debug('Error creating response:', error.message);
+        throw new Error(error.message);
     }
 }
 
 // Export response services
 module.exports = {
-  getAllResponses,
-  getResponseById,
-
   createResponse,
 };
