# backend/src/swagger/schemas/sessionSchema.yaml
@@ -1,5 +1,31 @@
 components:
   schemas:
+    SessionInput:
+      type: object
+      required:
+        - teacherId
+        - playerId
+        - quizId
+        - startTime
+      properties:
+        startTime:
+          type:  date-time
+          description: Start time of the session in ISO 8601 format
+          default: "2023-07-19T12:34:56Z"
+        status:
+          type: string
+          description: Status of the session
+          enum: ['pending', 'active', 'completed', 'paused']
+          default: "pending"
+        teacherId:
+          type: objectId
+          description: Unique identifier for the teacher
+          example: '68e283a0d9eaff29b0c84535'
+        quizId:
+          type: objectId
+          description: Unique identifier for the quiz
+          example: '63a7f0c2e4b0c8b1a1e4d3f3'
+
     Session:
       type: object
       required:
